--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -3,7 +3,6 @@ body {
   height: 90vh;
   margin: 0;
   padding: 0;
-
 }
 .center {
   width: 100%;
@@ -82,14 +81,18 @@ body {
   transform: translate(0, -50%);
   width: 10px;
   height: 10px;
-  background: rgb(255, 255, 255);
+  background: #b4b4b4;
+
   outline: 0.2mm solid rgb(120, 120, 120);
   border-radius: 0.3mm;
 }
 .item:nth-child(2)::before {
-  background: rgb(180, 180, 180);
+  /*
+    background-color: rgba(233, 233, 233, 0.4); */
   outline: none;
+  background: rgb(28, 185, 120);
 }
+
 .item:nth-child(3)::before {
   background: rgb(28, 185, 120);
   outline: none;
